modules/gdscript/tests/scripts/analyzer/errors/redefine_local_constant.gd
func test():
	const TEST = 25

	# Error here (can't assign a new value to a constant).
	TEST = 50
